# Morrigan

./: .gitignore  README.md  constants.py  crossing_pair.py  full_model.py  gitignore  helper_functions.py  initialise.toml  interaction_timescales.py  main.py  mass_loss.py  merge_embryo.py  orbit_cross_K25.py  plot.py  pyproject.toml  run_model.py  secular_solution.py  sort_planet.py  tau_cross.py
src/morrigan/: __init__.py  crossing_pair.py  driver.py  helper_functions.py  interaction_timescales.py  mass_loss.py  merge_embryo.py  orbit_cross_K25.py  secular_solution.py  sort_planet.py
tests/: test_run_system.py
